# event-ingest/generated_models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yml
-#   timestamp: 2025-05-08T15:36:33+00:00
+#   timestamp: 2025-05-09T15:07:03+00:00
 
 from __future__ import annotations
 
@@ -12,8 +12,8 @@ from pydantic import AnyUrl, BaseModel, EmailStr, Field
 
 
 class Geo(BaseModel):
-    latitude: float = Field(..., example=34.0522)
-    longitude: float = Field(..., example=-118.2437)
+    lat: float = Field(..., description='Latitude of the event.', example=34.0522)
+    lon: float = Field(..., description='Longitude of the event.', example=-118.2437)
 
 
 class OrganizerInfo(BaseModel):
